--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,26 @@
   --foreground: #171717;
 }
 
+@font-face {
+  font-family: 'GintoNord';
+  src: url('/fonts/ginto-nord/ABCGintoNord-Light.woff2') format('woff2'),
+       url('/fonts/ginto-nord/ABCGintoNord-Light.woff') format('woff'),
+       url('/fonts/ginto-nord/ABCGintoNord-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'GintoNordBold';
+  src: url('/fonts/ginto-nord/ABCGintoNord-Black.woff2') format('woff2'),
+       url('/fonts/ginto-nord/ABCGintoNord-Black.woff') format('woff'),
+       url('/fonts/ginto-nord/ABCGintoNord-Black.otf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -22,5 +42,21 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'GintoNord', Arial, Helvetica, sans-serif;
+}
+
+.nav-col {
+  width: calc((100% - (1rem * 11)) / 12);
+  background: blue; /* for debugging */
+  left: 1rem;
+}
+
+.home-marquee span.m-bold {
+  width: 400px;
+  font-family: 'GintoNordBold', sans-serif;
+}
+
+.title {
+  font-family: 'GintoNordBold', sans-serif;
+  font-size: 2rem;
 }
