--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,7 @@
   --font-mono: var(--font-geist-mono);
 } */
 
+/* light dark mode */
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -50,6 +51,9 @@ body {
   width: calc((100% - (1rem * 11)) / 12);
 }
 
+.fake-1-col-margin {
+  left: calc(((100% - 11rem) / 7) + 1.5rem);
+}
 
 
 .home-marquee span.m-bold {
@@ -85,4 +89,53 @@ body {
 
 .swiper-button-next:after {
     content: '〉' !important;
+}
+.menu-icon {
+  z-index: 10;
+  width: 40px;
+  height: 24px;
+}
+
+.menu-icon__cheeckbox {
+  position: relative;
+  width: 32px;
+  height: 24px;
+}
+
+.menu-icon span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1px; /* thicker lines for visibility */
+  background-color: #000;
+  border-radius: 1px;
+  transition: all 0.3s ease;
+}
+
+.menu-icon .open span {
+  background-color: #fff;
+}
+
+.menu-icon span:first-of-type {
+  top: 0;
+}
+
+.menu-icon span:last-of-type {
+  bottom: 0;
+}
+
+/* Open state */
+.menu-icon__cheeckbox.open span:first-of-type {
+  transform: rotate(45deg);
+  top: 11px; /* half of 24px height */
+}
+
+.menu-icon__cheeckbox.open span:last-of-type {
+  transform: rotate(-45deg);
+  bottom: 11px;
+}
+
+.menu-icon__cheeckbox.open span:first-of-type,
+.menu-icon__cheeckbox.open span:last-of-type {
+  width: 32px;
 }
