--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,11 +66,12 @@ body {
 }
 
 .title-scale {
-  font-size: clamp(1.75rem, 4vw, 2.25rem);
+  /* font-size: clamp(1.75rem, 4vw, 2.25rem); */
+  font-size: clamp(1.3rem, 4vw, 2.25rem);
 }
 
 .big-title-scale {
-  font-size: clamp(4.25rem, 6vw, 10rem);
+  font-size: clamp(2.75rem, 6vw, 10rem);
   line-height: 0.8;
 }
 
@@ -145,4 +146,16 @@ body {
   .yo-club .fake-1-col-margin {
     left: 0;
   }
+
+  .big-title-scale {
+    line-height: 0.9;
+  }
+
+  .swiper-button-next{
+    right: -30px !important;
+  }
+  .swiper-button-prev{
+    left: -30px !important;
+  }
+
 }
