--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,10 +65,15 @@ body {
   font-family: 'GintoNordBold', sans-serif;
 }
 
+.sml-title-scale {
+  font-size: clamp(0.9rem, 2.8vw, 1.6rem);
+}
+
 .title-scale {
   /* font-size: clamp(1.75rem, 4vw, 2.25rem); */
   font-size: clamp(1.3rem, 4vw, 2.25rem);
 }
+
 
 .big-title-scale {
   font-size: clamp(2.75rem, 6vw, 10rem);
